# SimALS-MaxError

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
als/: CMakeLists.txt
als/src/: als.cc  als.h  cmdline.hpp  error.cc  error.h  header.h  lac.cc  lac.h  main.cc  my_abc.cc  my_abc.h  my_util.hpp  pbd.cc  pbd.h  sat_wrapper.hpp  simulator.cc  simulator.h
als/tests/: CMakeLists.txt  als_tests.cc
als/tests/benchmarks/: absdiff_r10_MAXED7_s54_d11.blif  absdiff_r11_MAXED15_s47_d11.blif  absdiff_r12_MAXED15_s40_d9.blif  absdiff_r13_MAXED31_s33_d9.blif  absdiff_r14_MAXED31_s24_d8.blif  absdiff_r15_MAXED63_s18_d8.blif  absdiff_r16_MAXED63_s8_d3.blif  absdiff_r1_MAXED0_s111_d14.blif  absdiff_r2_MAXED0_s106_d14.blif  absdiff_r3_MAXED0_s104_d14.blif  absdiff_r4_MAXED1_s95_d14.blif  absdiff_r5_MAXED1_s88_d13.blif  absdiff_r6_MAXED3_s82_d13.blif  absdiff_r7_MAXED3_s73_d11.blif  absdiff_r8_MAXED3_s72_d11.blif  absdiff_r9_MAXED7_s65_d11.blif  am8_r17_MAXED25_s421_d35.blif  am8_r46_MAXED1_s551_d38.blif  am8_r49_MAXED3_s540_d38.blif  am8_r4_MAXED0_s467_d35.blif  am8_r53_MAXED5_s534_d38.blif  am8_r54_MAXED9_s526_d38.blif  am8_r55_MAXED12_s524_d38.blif  am8_r57_MAXED13_s517_d38.blif  am8_r58_MAXED21_s502_d38.blif  am8_r59_MAXED25_s494_d38.blif  am8_r60_MAXED28_s492_d38.blif  am8_r63_MAXED37_s482_d38.blif  am8_r64_MAXED44_s479_d38.blif  c1355_final.blif  c1355_r5_MAXHDxxx_s365_d16.blif  mac_wce0.blif  mac_wce8.blif
input/benchmark/sop/ablation/: add128.blif  am8.blif  binsqrd.blif  buttfly.blif  mult32.blif  rca32.blif
input/benchmark/sop/bacs/: absdiff.blif  add8u_0FP.blif  mac.blif  mult16.blif
input/benchmark/sop/epfl/: arbiter.blif  cavlc.blif  ctrl.blif  dec.blif  i2c.blif  int2float.blif  memctrl.blif  priority.blif  router.blif  voter.blif
input/benchmark/sop/evoapprox/: add12u.blif  add16u.blif  mul11u.blif  mul12u.blif  mul16u.blif  mul8u.blif
